force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Object records are created through the VIQ batch integration and are created at various moments to track the # of errors in functionality and data integrity when attempting to either create opportunities from the Zilliant database or to send won/lost opportunities back to Zilliant.</description>
    <label>VIQ Error Log</label>
    <nameField>
        <displayFormat>E-{DD}{MM}{YY}-{0000}</displayFormat>
        <label>VIQ Error Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIQ Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>