force-app/main/default/objects/Error_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Stores a numerical code that can be interpreted for meaning. Stamped on creation.</description>
    <inlineHelpText>Stamped from code. Corresponds to Error Message.</inlineHelpText>
    <label>Error Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>