force-app/main/default/objects/Error_Log__c/fields/VIQ_Insight_Key_Error__c.field-meta.xml
<CustomField>
    <fullName>VIQ_Insight_Key_Error__c</fullName>
    <description>Stamped with the Insight key relevant to this error from Zilliant.</description>
    <inlineHelpText>Insight that is the origin of this error</inlineHelpText>
    <label>VIQ Insight Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>