force-app/main/default/objects/Error_Log__c/listViews/Yesterday_s_Errors.listView-meta.xml
<ListView>
    <fullName>Yesterday_s_Errors</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>VIQ_Insight_Key_Error__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterday&apos;s Errors</label>
    <language>en_US</language>
</ListView>